--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@lens-chain/sdk": "^1.0.3",
     "@lens-chain/storage-client": "^1.0.5",
     "@lens-protocol/client": "0.0.0-canary-20250624084811",
     "@lens-protocol/metadata": "^2.1.0",
@@ -67,7 +68,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "viem": "~2.29.1",
+    "viem": "~2.29.4",
     "wagmi": "^2.15.2",
     "zod": "^3.24.1",
     "zustand": "^5.0.6"
