--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID = "d46f8d9c2b37e44c762aa9871dd87e39";
 NEXT_PUBLIC_ALCHEMY_ID = "2qNVqo1fX8VduWF9VqhEb";
+#NEXT_PUBLIC_LENS_API_KEY= "8fgKZ6-5V-erAMqG7a_fqjVD3zu9a56oWs";//testnet
