--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "14.2.16",
+    "next-intl": "^4.3.4",
     "next-themes": "^0.4.4",
     "pino-pretty": "^13.0.0",
     "react": "^18",
