--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@lens-protocol/react": "0.0.0-canary-20250624084811",
     "@lens-protocol/react-web": "latest",
     "@lens-protocol/wagmi": "latest",
+    "@mui/lab": "7.0.0-beta.16",
+    "@mui/material": "^7.3.1",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -64,7 +66,6 @@
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
-    "react-layout-masonry": "^1.2.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
