--- a/.env
+++ b/.env
@@ -1,3 +1,11 @@
-NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID = "d46f8d9c2b37e44c762aa9871dd87e39";
-NEXT_PUBLIC_ALCHEMY_ID = "2qNVqo1fX8VduWF9VqhEb";
-#NEXT_PUBLIC_LENS_API_KEY= "8fgKZ6-5V-erAMqG7a_fqjVD3zu9a56oWs";//testnet
+NEXT_PUBLIC_WALLETCONNECT_PROJECT_ID=d46f8d9c2b37e44c762aa9871dd87e39
+NEXT_PUBLIC_ALCHEMY_ID=2qNVqo1fX8VduWF9VqhEb
+
+
+NEXT_PUBLIC_ENVIRONMENT=development # or production
+
+NEXT_PUBLIC_APP_ADDRESS=0xFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF
+NEXT_PUBLIC_APP_ADDRESS_TESTNET=0xff041A0EBC95Ece2d8B99Bf9a0E5444aAdf09Af7 
+
+LENS_API_KEY=hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhh
+LENS_API_KEY_TESTNET=rv3OCV-Mp-2W1zpIl2WC8f2Wyb7G5nvIdy 
