--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "@lens-protocol/react": "0.0.0-canary-20250624084811",
     "@lens-protocol/react-web": "latest",
     "@lens-protocol/wagmi": "latest",
-    "@mui/lab": "7.0.0-beta.16",
-    "@mui/material": "^7.3.1",
+    "@mantine/core": "^8.2.4",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
