--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@lens-protocol/react-web": "latest",
     "@lens-protocol/wagmi": "latest",
     "@mantine/core": "^8.2.4",
+    "@mantine/hooks": "^8.2.5",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
