Rename project from "Ordinary" to "o-kitchen"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ordinary-app",
-  "version": "0.1.0",
+  "name": "o-kitchen-app",
+  "version": "0.2.0",
   "private": true,
   "scripts": {
     "build": "next build",
