--- a/src/app/manifest.json
+++ b/src/app/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Ordinary",
-  "short_name": "Ordinary",
+  "name": "o-kitchen",
+  "short_name": "o-kitchen",
   "icons": [
     {
       "src": "/logo/web-app-manifest-192x192.png",
